test-cases/valid/reject/return_expresion_from_void_function.ul
void main() {
    return 1; // Cannot return a value from a void function
}
